--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
 
         <h2>Contact Us</h2>
         <p>If you have any questions about this Privacy Statement, please contact us at:</p>
-        <p>Email: [Insert Contact Email Address Here]</p>
-        <p>Address: [Insert Contact Address Here (Optional)]</p>
+        <p>Email: danie@danovate.co.za</p>
     </div>
 </body>
 </html>
